# tcplugins-zurihac2020

./: .gitignore
example-plugins/inj-tyfam-plugin/: inj-tyfam-plugin.cabal
example-plugins/inj-tyfam-plugin/src/Plugin/: InjTyFam.hs
