cabal-version: 2.4

name: inj-tyfam-plugin
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
author: Nicolas Frisby
maintainer: nicolas.frisby@gmail.com
-- copyright:
-- category:

common common

  build-depends:
    base
      ^>= 4.14.0

library

  import:common

  default-language: Haskell2010

  hs-source-dirs:
    src

  exposed-modules:
    Plugin.InjTyFam

  build-depends:
    ghc
      ^>= 8.11.0

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists

executable smoke
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs:
    app

  build-depends:
    inj-tyfam-plugin

  other-modules:
    Prelim
